# ds-playground

./: .gitignore  README.md
RNNs/: main.py  model.py  train.py
ai-agents/huggingface-course-project/: agent.py  app.py  system_prompt.txt  tools.py  utils.py
ai-agents/langgraph-101/: README.md  sandbox_fancier_langgraph_example.ipynb  sandbox_first_langgraph_encounter.ipynb
courses/Data-Analysis-with-Python/: README.md
courses/Unsupervised-Learning-Recommenders-Reinforcement-Learning/: k-means-image-compression.ipynb  requirements.txt  utils.py
data-analysis/: README.md
data-analysis/air-passengers/: README.md  analysis.ipynb
data-analysis/titanic-disaster/: README.md  analysis.ipynb
data-analysis/tumor-reappearance/: eda.ipynb
general/RNNs/: utils.py
general/k-means/: README.md
general/micrograd/: nn.py
k-means/: notebook.ipynb
kaggle-intermediate-machine-learning/2-missing-values/: tutorial-examples.ipynb
local-outlier-factor/: README.md  notebook.ipynb
makemore/: prototype.ipynb
micrograd/: application_iris.ipynb  compute.py  micrograd.ipynb  nn.py
miscellaneous/litellm-basic-proxy/: docker-compose.yml  litellm_config.yaml  pyproject.toml
miscellaneous/litellm-basic-proxy/AgentsBackend/: main.py  pyproject.toml
miscellaneous/litellm-basic-proxy/AgentsBackend/agents_backend/: llms.py
miscellaneous/litellm-basic-proxy/src/: main.py
ml/: README.md
ml-applications/boston-house-pricing-prediction/: main.ipynb
ml-applications/f1-analysis/: README.md
ml/grocery-classification/: .gitignore  sandbox.ipynb
(+50 files in other folders)
