[project]
name = "agents_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "manuelmaior.29",email = "manuelmaior.29@gmail.com"}
]

requires-python = ">=3.12,<4.0"
dependencies = [
    "litellm[proxy] (>=1.74.15.post1,<2.0.0)",
    "autogen-ext (>=0.7.2,<0.8.0)",
    "autogen-agentchat (>=0.7.2,<0.8.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
